feat(ingest): save original filename in source_path and drop filestore
